# pico-examples

./: .bazelversion  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MODULE.bazel  README.md  example_auto_set_url.cmake  pico_extras_import_optional.cmake  update_pioasm_outputs.sh
adc/adc_console/: CMakeLists.txt  adc_console.c
adc/dma_capture/: CMakeLists.txt  dma_capture.c  resistor_dac.pio
adc/microphone_adc/: CMakeLists.txt  README.adoc  microphone_adc.c  microphone_adc.fzz  plotter.py
adc/onboard_temperature/: CMakeLists.txt  onboard_temperature.c
adc/read_vsys/: CMakeLists.txt  power_status.c  power_status.h  read_vsys.c
binary_info/blink_any/: CMakeLists.txt  blink_any.c
binary_info/hello_anything/: CMakeLists.txt  hello_anything.c
blink/: CMakeLists.txt  README.md  blink.c
blink_simple/: CMakeLists.txt  blink_simple.c
bootloaders/encrypted/: CMakeLists.txt  README.md  aes.S  config.h  enc-pt.json  enc_bootloader.c  hello_serial.c  hello_serial_enc.c  mbedtls_aes.c  mbedtls_config.h  otp.json  update-key.cmake
bootloaders/uart/: CMakeLists.txt  uart-pt.json  uart_binary.c  uart_boot.c
clocks/detached_clk_peri/: CMakeLists.txt  detached_clk_peri.c
clocks/hello_48MHz/: CMakeLists.txt  hello_48MHz.c
clocks/hello_resus/: CMakeLists.txt  hello_resus.c
cmake/build_variants/: CMakeLists.txt  main.c  other.c  other.h
cynthia/digital_display/: CMakeLists.txt  digital_display.c
dcp/hello_dcp/: CMakeLists.txt  dcp_examples.S  hello_dcp.c
divider/: CMakeLists.txt  hello_divider.c
dma/channel_irq/: CMakeLists.txt  channel_irq.c  pio_serialiser.pio
dma/control_blocks/: CMakeLists.txt  control_blocks.c
i2c/: CMakeLists.txt
i2c/bmp280_i2c/: CMakeLists.txt  README.adoc  bmp280_i2c.c  bmp280_i2c.fzz
i2c/bus_scan/: CMakeLists.txt  bus_scan.c
i2c/ht16k33_i2c/: CMakeLists.txt  README.adoc  ht16k33_i2c.c
i2c/ina260_i2c/: CMakeLists.txt  ina260_i2c.c
i2c/lcd_1602_i2c/: CMakeLists.txt  README.adoc  i2c_lcd.c  i2c_lcd.h  lcd_1602_i2c.c  lcd_1602_i2c.fzz  main.c
i2c/lis3dh_i2c/: CMakeLists.txt  README.adoc  lis3dh_i2c.c  lis3dh_i2c.fzz
i2c/mcp9808_i2c/: CMakeLists.txt  README.adoc  mcp9808.fzz  mcp9808_i2c.c  mcp9808_i2c.fzz
i2c/mma8451_i2c/: CMakeLists.txt  README.adoc  mma8451_i2c.c  mma8451_i2c.fzz
i2c/mpl3115a2_i2c/: CMakeLists.txt  README.adoc  mpl3115a2_i2c.c  mpl3115a2_i2c.fzz  mpl3115a2_i2c.h
i2c/mpu6050_i2c/: CMakeLists.txt  README.adoc  mpu6050.cpp  mpu6050.hpp  mpu6050_i2c.c  mpu6050_i2c.fzz  mpu6050_i2c.h  mpu6050_i2c_irq_main.cpp  mpu6050_i2c_main.c  mpu6050_scale_test.cpp
i2c/oled_i2c/: CMakeLists.txt  README.adoc  img_to_array.py  oled_i2c.c  oled_i2c.fzz  raspberry26x32.h
i2c/pa1010d_i2c/: CMakeLists.txt  README.adoc  pa1010d_i2c.c  pa1010d_i2c.fzz
i2c/pcf8523_i2c/: CMakeLists.txt  README.adoc  pc8523_i2c.fzz  pcf8523_i2c.c
i2c/slave_mem_i2c/: CMakeLists.txt  slave_mem_i2c.c  slave_mem_i2c_burst.c
i2c/slave_mode/: CMakeLists.txt  main.c
i2c/ssd1306_i2c/: 1306_i2c.fzz  CMakeLists.txt  README.adoc  img_to_array.py  ssd1306_font.h  ssd1306_i2c.c  ssd1306_i2c.fzz
multitask/: CMakeLists.txt  main.c
multitask/s_task/: LICENSE
pico_w/: BUILD.bazel  CMakeLists.txt
pico_w/access_point/: CMakeLists.txt  picow_access_point.c
pico_w/blink/: CMakeLists.txt  picow_blink.c
pico_w/bt/: BUILD.bazel  CMakeLists.txt  README.md  btstack_audio_pico.c  btstack_examples.BUILD  picow_bt_example.bzl  picow_bt_example_common.c  picow_bt_example_common.h  picow_bt_example_freertos.c  picow_bt_example_poll.c
pico_w/iperf/: CMakeLists.txt  picow_iperf.c
pico_w/mqtt/: CMakeLists.txt
pico_w/ntp_client/: picow_ntp_client.c
pico_w/python_test_tcp/: python_test_tcp_client.py  python_test_tcp_server.py
pico_w/tcp_client/: picow_tcp_client.c
pico_w/tcp_server/: picow_tcp_server.c
pico_w/tls_client/: CMakeLists.txt  picow_tls_client.c
pico_w/udp/: picow_udp_beacon.c
pico_w/udp_beacon/: picow_udp_beacon.c
pico_w/wifi/: BUILD.bazel  CMakeLists.txt  lwipopts_examples_common.h  mbedtls_config_examples_common.h
pico_w/wifi_scan/: CMakeLists.txt  picow_wifi_scan.c
pico_w/wifi_vsys/: CMakeLists.txt  wifi_vsys.cpp
pio/: CMakeLists.txt
pio/7_segment/: 7_segment.c  7_segment_schematic.fzz  7_segment_wiring.fzz  CMakeLists.txt  README.adoc
pio/addition/: CMakeLists.txt  addition.c  addition.pio
pio/apa102/: CMakeLists.txt  apa102.c  apa102.pio
pio/clocked_input/: CMakeLists.txt  clocked_input.c  clocked_input.pio
pio/differential_manchester/: CMakeLists.txt  differential_manchester.c  differential_manchester.pio
pio/hello_pio/: CMakeLists.txt  hello.c  hello.pio
pio/hub75/: CMakeLists.txt  Readme.md  hub75.c  hub75.pio  mountains_128x64_rgb565.h
pio/i2c/: CMakeLists.txt  i2c.pio  i2c_bus_scan.c  pio_i2c.c  pio_i2c.h
pio/i2s_microphone/: CMakeLists.txt  i2s_microphone.c  i2s_microphone.pio
pio/ir_nec/: CMakeLists.txt  README.adoc  pio_ir_loopback.fzz
pio/irq/: CMakeLists.txt  main.c  simple_irq.pio
pio/isr/: CMakeLists.txt  main.c  simple_isr.pio  simply_isr.pio
pio/logic_analyser/: CMakeLists.txt  logic_analyser.c
pio/manchester_encoding/: CMakeLists.txt  manchester_encoding.c  manchester_encoding.pio
pio/onewire/: CMakeLists.txt  README.adoc  ds18b20.h  onewire.c  ow_rom.h  pio_onewire.fzz
pio/pio_blink/: CMakeLists.txt  blink.c  blink.pio
pio/pio_ws2812_cpp/: CMakeLists.txt  CRGB.hpp  README.md  pled.hpp  pled_demo.cpp  ws2812.pio
pio/ppm/: CMakeLists.txt  ppm.c  ppm.pio
pio/pwm/: CMakeLists.txt  pwm.c  pwm.pio
pio/quadrature_encoder/: CMakeLists.txt  quadrature_encoder.c  quadrature_encoder.pio
pio/quadrature_encoder_substep/: CMakeLists.txt  README.md  quadrature_encoder_substep.c  quadrature_encoder_substep.pio
pio/rs422_tx/: CMakeLists.txt  rs422_tx.c  rs422_tx.pio
pio/spi/: CMakeLists.txt  pio_spi.c  pio_spi.h  spi.pio  spi_flash.c  spi_loopback.c
pio/squarewave/: CMakeLists.txt  squarewave.c  squarewave.pio  squarewave_div_sync.c  (+2 more)
reset/: CMakeLists.txt
tiny/: CMakeLists.txt  blink_tiny.c
usb/: CMakeLists.txt  README.md
(+687 files in other folders)
