if (NOT PICO_NO_HARDWARE)
    add_subdirectory(bmp280_i2c)
    add_subdirectory(bus_scan)
    add_subdirectory(lcd_1602_i2c)
    add_subdirectory(lis3dh_i2c)
    add_subdirectory(mcp9808_i2c)
    add_subdirectory(mma8451_i2c)
    add_subdirectory(mpl3115a2_i2c)
    add_subdirectory(mpu6050_i2c)
    add_subdirectory(ssd1306_i2c)
    add_subdirectory(pa1010d_i2c)
    add_subdirectory(pcf8523_i2c)
    add_subdirectory(ht16k33_i2c)
    add_subdirectory(slave_mem_i2c)
endif ()
