if (NOT PICO_NO_HARDWARE)
    add_subdirectory(addition)
    add_subdirectory(apa102)
    add_subdirectory(clocked_input)
    add_subdirectory(differential_manchester)
    add_subdirectory(hello_pio)
    add_subdirectory(hub75)
    add_subdirectory(i2c)
    add_subdirectory(ir_nec)
    add_subdirectory(logic_analyser)
    add_subdirectory(manchester_encoding)
    add_subdirectory(onewire)
    add_subdirectory(pio_blink)
    add_subdirectory(pwm)
    add_subdirectory(quadrature_encoder)
    add_subdirectory(spi)
    add_subdirectory(squarewave)
    add_subdirectory(st7789_lcd)
    add_subdirectory(uart_rx)
    add_subdirectory(uart_tx)
    add_subdirectory(ws2812)
endif ()
