if (TARGET tinyusb_device)
    add_subdirectory(device)
else ()
    message("Skipping TinyUSB device examples as TinyUSB is unavailable")
endif ()
if (TARGET tinyusb_host)
    add_subdirectory(host)
else ()
    message("Skipping TinyUSB host examples as TinyUSB is unavailable")
endif ()
if (TARGET tinyusb_pico_pio_usb)
    if ((NOT CMAKE_C_COMPILER_ID STREQUAL "GNU") OR CMAKE_C_COMPILER_VERSION VERSION_GREATER_EQUAL 11.3)
        message("Skipping TinyUSB dual examples, as TinyUSB hw/mcu/raspberry_pi/Pico-PIO-USB does not currently compile on non GCC or GCC 11.3 or greater")
    else()
        add_subdirectory(dual)
    endif()
else ()
    message("Skipping TinyUSB dual examples, as TinyUSB hw/mcu/raspberry_pi/Pico-PIO-USB submodule unavailable")
endif ()