if (TARGET tinyusb_device)
    add_subdirectory(device)
else ()
    message("Skipping TinyUSB device examples as TinyUSB is unavailable")
endif ()
if (TARGET tinyusb_host)
    add_subdirectory(host)
else ()
    message("Skipping TinyUSB host examples as TinyUSB is unavailable")
endif ()
if (TARGET tinyusb_pico_pio_usb)
    add_subdirectory(dual)
else ()
    message("Skipping TinyUSB dual examples, as TinyUSB hw/mcu/raspberry_pi/Pico-PIO-USB submodule unavailable")
endif ()

if (TARGET cherryusb_device)
    add_subdirectory(cherryusb/device)
else()
    message("Skipping CherryUSB device examples as CherryUSB is unavailable")
endif()

if (TARGET cherryusb_host)
    add_subdirectory(cherryusb/host)
else()
    message("Skipping CherryUSB host examples as CherryUSB is unavailable")
endif()